--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+calamine = "0.22.1"
 clap = { version = "4.4.6", features = ["derive", "cargo"] }
 ftlog = "0.2.10"
+lazy_static = "1.4.0"
 log = "0.4.20"
+regex = "1.10.2"
 serde = { version = "1.0.188", features = ["derive"] }
 surrealdb = { version = "1.0.0", features = ["protocol-http"] }
 tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "integrated-auth-gssapi"] }
