--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ anyhow = "1.0.75"
 calamine = "0.22.1"
 clap = { version = "4.4.6", features = ["derive", "cargo"] }
 ftlog = "0.2.10"
+itertools = "0.11.0"
 log = "0.4.20"
 regex = "1.10.2"
 serde = { version = "1.0.188", features = ["derive"] }
-surrealdb = { version = "1.0.0", features = ["protocol-http"] }
+# surrealdb = { version = "1.0.0", features = ["protocol-http"] }
 tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "integrated-auth-gssapi"] }
 time = "0.3.29"
 tokio = { version = "1.33.0", features = ["rt-multi-thread", "sync"] }
