move main to bin folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "Watcher for SAP confirmations"
 authors = ["Patrick Miller"]
 version = "0.1.0"
 edition = "2021"
+default-run = "recon"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,5 +20,5 @@ serde = { version = "1.0.188", features = ["derive"] }
 # surrealdb = { version = "1.0.0", features = ["protocol-http"] }
 tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "integrated-auth-gssapi"] }
 time = "0.3.29"
-tokio = { version = "1.33.0", features = ["rt-multi-thread", "sync"] }
+tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }
 tokio-util = { version = "0.7.9", features = ["compat"] }
